# partyplayer

./: Cargo.toml
src/: main.rs
src/partyplayer/: lib.rs
src/partyplayer/server/: manager.rs  mod.rs  rest.rs  shutdown.rs  websocket.rs
src/server/: manager.rs  mod.rs  rest.rs  shutdown.rs  websocket.rs
