[package]
name = "partyplayer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.17.0", features = ['full'] }
tokio-stream = "0.1.8"
tokio-tungstenite = "*"
env_logger = "0.9.0"
log = "0.4.14"

[[bin]]
name = 'partyplayer'
path = "src/bin/partyplayer.rs"